package ar.edu.utn.ba.ddsi.smartlife.security_service_in_home.models.entities;

public enum TipoDeEvento {
    ROBO,
    INCENDIO,
    FUGA_DE_GAS,
    TENSION_BAJA
}
